--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/logo.png" />
+    <link rel="preload" as="image" href="/assets/Profile_for_portfolio.webp">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio | Luka Gulverdashvili</title>
   </head>
