Added meta tags for SEO

--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/assets/Avatar.png" />
     <link rel="preload" as="image" href="/assets/Profile_for_portfolio.webp">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Luka Gulverdashvili's portfolio showcasing skills, projects, and achievements in front-end and full-stack web development.">
+    <meta name="keywords" content="Luka Gulverdashvili, web developer, front-end developer, full-stack developer, portfolio, React, JavaScript, TypeScript, web development">
+    <meta name="author" content="Luka Gulverdashvili">
+    
+    <meta property="og:title" content="Portfolio | Luka Gulverdashvili">
+    <meta property="og:description" content="Explore the portfolio of Luka Gulverdashvili, a passionate web developer specializing in front-end and full-stack development.">
+    <meta property="og:url" content="https://lukagulverdashvili.vercel.app/">
+    <meta property="og:type" content="website">
+
     <title>Portfolio | Luka Gulverdashvili</title>
   </head>
   <body>
