--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/Avatar.png" />
     <link rel="preload" as="image" href="/assets/Profile_for_portfolio.webp">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap" as="style">
+
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Luka Gulverdashvili's portfolio showcasing skills, projects, and achievements in front-end and full-stack web development.">
