--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/Avatar.png" />
-    <link rel="preload" as="image" href="/assets/Profile_for_portfolio.webp">
+    <link rel="preload" as="image" href="/assets/Profile_for_portfolio.webp" type="image/webp">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap" as="style">
 
     
